--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 অর্থঃ আল্লা-হুম্মা ইন্নী আউযু বিকা মিন্ আন্ উশারিকা বিকা শাইয়াও ওয়া মু'মিনু বিহী ওয়াস্ তাগফিরুকা মা-আ’লামু বিহী ওয়ামা-লা-আ’লামু বিহী। ওয়া আতুবু ওয়া আ-মাতু ওয়া আকুলু আল্লা ইলা-হা ইল্লাল্লাহু মুহাম্মাদুর রাসূলুল্লাহ।
 অর্থঃ ওগাে আল্লাহ! আমি তােমার নিকট আশ্রয় প্রার্থনা করি তােমার সাথে অন্য কাউকে শরীক  করা হতে। আমি আমার জানা অজানা সকল কিছুর উপর ঈমান এনেছি। তােমার নিকট আমার জানা আজানা সকল গুণা হতে ক্ষমা প্রার্থনা করছি এবং তওবা করছি। আমি তােমার উপর ঈমান এনেছি ও স্বীকার করছি যে, আল্লাহ ছাড়া আর কোন ইলাহ নেই এবং হযরত মুহাম্মদ (সঃ ) আল্লাহর প্রেরিত রাসূল।
 ইসলমের ভিত্তি ৫টি--
-     <ol style="margin-left:500px;margin-right:500px;color:green;">   
+     <ol style="margin-left:500px;color:green;">   
  <!--<li>tag -->                                                            
   <li>কালেমা</li>                                                     
   <li>নামাজ</li>
